Implement HarmonicVector3EnergyErrorFunction ctor